# Pipecat-DG-Gemini-11labs

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  restaurant_lookup.py  utils.py
outbound/: agent.py  server.py  system_prompt.md
static/: index.html
